Add --no-token flag to git-pr
Reviewed-by: rwestberg